fix: get student by id
